# opengl-practice

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
1.DrawTriangle/: CMakeLists.txt
1.DrawTriangle/shaders/: triangle.frag
1.DrawTriangle/src/: main.cpp
1.draw_triangle/: 1.draw_triangle.cpp  CMakeLists.txt  triangle.frag
1.draw_triangle/src/: main.cpp
2.texture_display/: 2.texture_display.cpp  texture.frag  texture.vert
3.transformations/: 3.transformations.cpp  transformations.vert
4.code_encapsulation/: code_encapsulation.cpp
5.coordinate_systems/: coordinate_systems.cpp  coordinate_systems.frag
6.light_material/: cube.frag  light.frag  light_material.cpp
7.imgui_demo/: cube.vert  imgui_demo.cpp  light.frag  light.vert
examples/: CMakeLists.txt  example.cpp  imgui_demo.cpp  triangle.vert
utils/: CMakeLists.txt
utils/include/: gl_render_utils.hpp
utils/include/gl_get_error/: gl_get_error.hpp
utils/include/gl_renderer/: camera.hpp  index_buffer.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
utils/src/gl_renderer/: camera.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
